<resources>

    <string name="app_name" translatable="false">Real Estate Manager</string>

    <!--Toolbar titles-->
    <string name="toolbar_title_property_detail">Property details</string>
    <string name="toolbar_title_property_edit">Property edit</string>
    <string name="toolbar_title_property_search">Research</string>
    <string name="toolbar_title_loan">Loan simulator</string>

    <!--Menu-->
    <string name="menu_add">Add</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_search">Search</string>
    <string name="menu_save">Save</string>
    <string name="menu_list">Properties</string>
    <string name="menu_map">Map</string>
    <string name="menu_loan">Loan simulator</string>
    <string name="menu_realtor">Realtor selection</string>
    <string name="menu_navigation_drawer_open">Open</string>
    <string name="menu_navigation_drawer_close">Close</string>

    <!--Buttons-->
    <string name="button_calculate">Calculate</string>

    <!--Text infos-->
    <string name="info_no_property_exist">No property exist in the database yet.\nCreate your first property by clicking on the \'+\' button.</string>
    <string name="info_no_property_match">No property match your current research.\nPlease try other parameters.</string>
    <string name="info_no_property_selected">No property is selected.</string>
    <string name="info_user_not_connected">Unknown user</string>

    <!--Text labels-->
    <string name="label_property_main_information">Main information</string>
    <string name="label_property_pictures">Pictures</string>
    <string name="label_property_min_nb_pictures">Min number of pictures</string>
    <string name="label_property_extras">Extras</string>
    <string name="label_property_location">Location</string>
    <string name="label_property_other_information">Other information</string>
    <string name="label_property_sold">Sold</string>
    <string name="label_property_sold_on">Sold on</string>
    <string name="label_property_available">Available</string>
    <string name="label_property_all">All</string>
    <string name="label_property_ad_title">Ad title</string>
    <string name="label_property_price">Price</string>
    <string name="label_property_price_settings">Price (k$)</string>
    <string name="label_property_type">Type</string>
    <string name="label_property_description">Description</string>
    <string name="label_property_size">Size</string>
    <string name="label_property_size_settings">Size (sqm)</string>
    <string name="label_property_nb_rooms">Rooms</string>
    <string name="label_property_nb_bedrooms">Bedrooms</string>
    <string name="label_property_nb_bathrooms">Bathrooms</string>
    <string name="label_property_build_date">Build year</string>
    <string name="label_property_street">Street</string>
    <string name="label_property_city">City</string>
    <string name="label_property_state">State \/ Province</string>
    <string name="label_property_country">Country</string>
    <string name="label_property_realtor">Realtor</string>
    <string name="label_property_ad_date">Ad date</string>
    <string name="label_property_sale_date">Sale date</string>
    <string name="label_property_sort">Sort</string>
    <string name="label_property_sort_asc">Ascending</string>
    <string name="label_property_sort_desc">Descending</string>
    <string name="label_loan_investment">Investment amount</string>
    <string name="label_loan_contribution">Contribution amount</string>
    <string name="label_loan_loan">Loan amount</string>
    <string name="label_loan_nb_years">Loan duration (years)</string>
    <string name="label_loan_interest_rate">Interest rate</string>
    <string name="label_loan_monthly_payments">Monthly payments</string>
    <string name="label_realtor_new">New realtor</string>
    <string name="label_realtor_select">Select realtor</string>
    <string name="label_realtor_name">Realtor name</string>

    <!--Text error messages-->
    <string name="error_mandatory_field">Mandatory</string>
    <string name="error_mandatory_sale_date">If sold, mandatory</string>
    <string name="error_forbidden_sale_date">If not sold, forbidden</string>

    <!--Toasts / Snackbars-->
    <string name="toast_message_firebase_user_connected">You\'re now connected as</string>
    <string name="toast_message_firebase_user_disconnected">You\'re disconnected.</string>
    <string name="toast_message_property_saved">The property is saved.</string>

    <!--Dialogs-->
    <string name="dialog_button_neutral">OK</string>
    <string name="dialog_button_positive">Yes</string>
    <string name="dialog_button_negative">No</string>
    <string name="dialog_button_validate">Validate</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_title_realtor_request">Realtor selection</string>
    <string name="dialog_message_realtor_request">Please select or create a realtor.</string>
    <string name="dialog_title_validation_issue">Caution!</string>
    <string name="dialog_message_input_not_valid">Some fields are not valid.\nPlease check these fields and try again.</string>
    <string name="dialog_title_sundry_issue">Issue!</string>
    <string name="dialog_message_no_network">The network is unavailable.\nYou can work offline in case you wish to.</string>
    <string name="dialog_message_picture_not_loaded">An error occurred while fetching the picture.</string>
    <string name="dialog_message_location_not_found">The location could not be found.\nPlease try again later.</string>
    <string name="dialog_title_permission_request">Permission request</string>
    <string name="dialog_message_permission_request_location">Your permission is requested to show your location on the map.</string>
    <string name="dialog_message_permission_request_write">Your permission is requested to use pictures from your device.</string>
    <string name="dialog_message_permission_request_write_and_camera">Your permission is requested to take pictures with your device.</string>
    <string name="dialog_title_properties_empty">No property found</string>
    <string name="dialog_message_no_property_exist">No property exist in the database yet.\nCreate your first property by clicking on the \'+\' button.</string>
    <string name="dialog_message_no_property_match">No property match your current research.\nPlease try other parameters.</string>
    <string name="dialog_title_input">Input</string>
    <string name="dialog_message_input_picture_description">Please fill a description for the picture.</string>

    <!--Images content descriptions-->
    <string name="content_description_picture">Picture</string>
    <string name="content_description_button">Button</string>

    <!--Others-->
    <string name="currency">$</string>
    <string name="size_unit">sqm</string>

    <!--Arrays of choice-->

    <string-array name="choice_price_range">
        <item>0</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
        <item>700</item>
        <item>800+</item>
    </string-array>

    <string-array name="choice_size_range">
        <item>0</item>
        <item>50</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>250</item>
        <item>300+</item>
    </string-array>

    <string-array name="choice_nb_rooms_range">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8+</item>
    </string-array>

    <string-array name="choice_date">
        <item>Less than 3 months</item>
        <item>Less than 6 months</item>
        <item>Less than 1 year</item>
        <item>All periods</item>
    </string-array>

</resources>
