<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_navigation_drawer_group">
        <item
            android:id="@+id/menu_navigation_drawer_list"
            android:icon="@drawable/ic_list_white"
            android:title="@string/menu_list">
        </item>
        <item
            android:id="@+id/menu_navigation_drawer_map"
            android:icon="@drawable/ic_map_white"
            android:title="@string/menu_map">
        </item>
        <item
            android:id="@+id/menu_navigation_drawer_loan"
            android:icon="@drawable/ic_currency_white"
            android:title="@string/menu_loan">
        </item>
        <item
            android:id="@+id/menu_navigation_drawer_log"
            android:icon="@drawable/ic_log_white"
            android:title="@string/menu_log">
        </item>
    </group>
</menu>