<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/map_info_property_picture"
        android:layout_width="@dimen/picture_size_small"
        android:layout_height="@dimen/picture_size_small"
        android:layout_margin="@dimen/components_margin_small"
        android:layout_gravity="center_vertical"
        tools:srcCompat="@tools:sample/avatars[12]"
        android:contentDescription="@string/content_description_picture"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/map_info_property_ad_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/components_margin_small"
            android:textSize="@dimen/text_size_body"
            android:text="@string/label_property_ad_title"/>

        <TextView
            android:id="@+id/map_info_property_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/components_margin_small"
            android:textSize="@dimen/text_size_body"
            android:textColor="@color/colorAccent"
            android:text="@string/label_property_price"/>

    </LinearLayout>

</LinearLayout>